# integrity-checker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: codeql.yml  release.yml  rust.yml
src/: cicrl.rs  circl.rs  error.rs  fileops.rs  main.rs  types.rs
