[package]
name = "integrity-checker"
version = "0.1.4"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
postcard = { version = "1.1.1", features = ["alloc", "use-std"] }
redb = "2.5.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "fs"] }

[profile.release]
strip = true
lto = true
#debug = true
panic = 'abort'
