[package]
name = "integrity-checker"
version = "0.1.10"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
log = "0.4.27"
postcard = { version = "1.1.1", features = ["alloc", "use-std"] }
redb = "3.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "fs"] }

[profile.release]
strip = true
lto = "thin"
debug = false
#panic = 'abort'
